# cs211-final_project

./: CMakeLists.txt  PROPOSAL.md  model.hxx
src/: board.cxx  board.hxx  controller.cxx  controller.hxx  dice.cxx  dice.hxx  main.cxx  model.cxx  model.hxx  player.cxx  player.hxx  view.cxx  view.hxx
test/: model_test.cxx
